logging-and-monitoring-using-elastic/application-performance-monitoring-with-eck/app-apm-inbuilt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: default
  labels:
    app: petclinic
    service: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
        service: petclinic
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: petclinic
    ############### Image with agent and agent config ##################
        image: eyalkoren/pet-clinic:with-agent
