logging-and-monitoring-using-elastic/application-performance-monitoring-with-eck/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: default
  labels:
    app: petclinic
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000
  selector:
    service: petclinic
