logging-and-monitoring-using-elastic/application-performance-monitoring-with-eck/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qs-kibana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quickstart-kb-http
            port:
              number: 5601
